# marimo-getting-started

./: notebook.py  pyproject.toml
.github/workflows/: publish.yaml
